# Hawk

./: .gitignore  README.md
.github/workflows/: hf-sync.yml
Backend/: .env.example  Dockerfile  README.md  pyproject.toml
Backend/app/: main.py
Backend/app/api/v1/: signals.py
Backend/app/core/: agent.py  brain.py  config.py  filters.py  scrapers.py  vault.py
Backend/app/schemas/: signals.py
Frontend/: .env.example  index.html  package.json  tailwind.config.js  vite.config.js
Frontend/src/: App.jsx  index.css
