[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.1",
    "g4f>=7.3.2",
    "groq>=1.1.1",
    "lxml>=6.0.2",
    "openai>=2.28.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "pydantic-settings>=2.13.1",
    "pyppeteer>=0.0.25",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "rss-parser>=2.1.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.41.0",
]
